[package]
name = "winamp-sys"
version = "0.1.0"
authors = ["Adam Spofford <pieflavor.mc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winuser", "guiddef"] }
