[package]
name = "winamp-sys"
version = "0.1.1"
authors = ["Adam Spofford <pieflavor.mc@gmail.com>"]
edition = "2018"
description = "Raw bindings to the Winamp headers in the Winamp SDK"
license = "Zlib"
repository = "https://github.com/pie-flavor/winamp-sys"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["winamp", "plugin", "audio"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winuser", "guiddef", "debug"] }

[features]
dsp = []
gen = []
in = []
ipc-pe = []
out = []
wa-dlg = []

[package.metadata.docs.rs]
features = ["dsp", "gen", "in", "ipc-pe", "out", "wa-dlg"]
default-target = "i686-pc-windows-msvc"
targets = []
